<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="winiary_inzynierka.inzynierka.MainActivity">

    <ToggleButton
        android:id="@+id/btn_main_conn_disconn"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:checked="false"
        android:textOff="@string/btn_connect"
        android:textOn="@string/btn_disconnect"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_main_conn_disconn"
        app:layout_constraintVertical_bias="1.0">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_zad_temp_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/info_zmien_zad_temp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_zadana_temp" />

            <SeekBar
                android:id="@+id/seekBar_zad_temp"
                android:layout_width="0dp"
                android:layout_height="33dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:max="100"
                android:min="0"
                android:progress="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_zad_temp_info" />

            <TextView
                android:id="@+id/tv_aktualna_temp_wartosc"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="normal"
                android:typeface="normal"
                app:layout_constraintBottom_toBottomOf="@+id/tv_aktualna_temp_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_aktualna_temp_text"
                app:layout_constraintTop_toTopOf="@+id/tv_aktualna_temp_text" />

            <TextView
                android:id="@+id/tv_aktualna_temp_text"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/aktualna_temp"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="normal"
                android:typeface="normal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cb_ster_temp_ON" />

            <TextView
                android:id="@+id/tv_zadana_temp"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/zadana_temp"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="normal"
                android:typeface="normal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_aktualna_temp_text" />

            <CheckBox
                android:id="@+id/cb_wl_wentylator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/wl_wentylator"
                android:textSize="16sp"
                android:textStyle="normal"
                android:typeface="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.504"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/seekBar_zad_temp" />

            <TextView
                android:id="@+id/tv_zad_temp_wartosc"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:gravity="center"
                android:singleLine="true"
                android:textColor="#000000"
                android:textStyle="normal"
                android:typeface="normal"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/tv_zadana_temp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_aktualna_temp_text"
                app:layout_constraintTop_toTopOf="@+id/tv_zadana_temp" />

            <CheckBox
                android:id="@+id/cb_ster_temp_ON"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/checkBox_temperatura_ON"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_temperatura" />

            <TextView
                android:id="@+id/tv_temperatura"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/temperatura"
                android:textSize="30sp"
                android:textStyle="bold"
                android:typeface="sans"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/progressBar_get_nasw" />

            <TextView
                android:id="@+id/tv_info_aktualne_osw"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/info_aktualne_osw"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/seekBar_set_prog_osw" />

            <TextView
                android:id="@+id/tv_info_ustaw_prog"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/info_ustaw_prog"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cb_czujnik_osw" />

            <CheckBox
                android:id="@+id/cb_czujnik_osw"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/checkBox_czujnik_osw"
                android:textAlignment="center"
                android:textSize="16sp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cb_ft_wyl_2" />

            <ProgressBar
                android:id="@+id/progressBar_get_nasw"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="34dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_info_aktualne_osw" />

            <SeekBar
                android:id="@+id/seekBar_set_prog_osw"
                android:layout_width="0dp"
                android:layout_height="33dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:max="100"
                android:min="0"
                android:progress="1"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_info_ustaw_prog" />

            <CheckBox
                android:id="@+id/cb_ft_wl_1"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/checkBox_wl"
                android:textSize="16sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_swiatlo_on_off" />

            <CheckBox
                android:id="@+id/cb_ft_wyl_1"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/checkBox_wyl"
                android:textSize="16sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cb_ft_wl_1" />

            <CheckBox
                android:id="@+id/cb_ft_wl_2"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/checkBox_wl"
                android:textSize="16sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cb_ft_wyl_1" />

            <CheckBox
                android:id="@+id/cb_ft_wyl_2"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/checkBox_wyl"
                android:textSize="16sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cb_ft_wl_2" />

            <Button
                android:id="@+id/btn_ft_wl_1"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/cb_ft_wl_1"
                app:layout_constraintLeft_toRightOf="@+id/cb_ft_wl_1"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/cb_ft_wl_1"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/btn_ft_wyl_1"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/cb_ft_wyl_1"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toRightOf="@+id/cb_ft_wyl_1"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/cb_ft_wyl_1"
                app:layout_constraintVertical_bias="1.0" />

            <Button
                android:id="@+id/btn_ft_wl_2"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/cb_ft_wl_2"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toRightOf="@+id/cb_ft_wl_2"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/cb_ft_wl_2"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/btn_ft_wyl_2"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/cb_ft_wyl_2"
                app:layout_constraintHorizontal_bias="0.526"
                app:layout_constraintLeft_toRightOf="@+id/cb_ft_wyl_2"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/cb_ft_wyl_2" />

            <TextView
                android:id="@+id/tv_oswietlenie"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/title_oswietlenie"
                android:textSize="30sp"
                android:textStyle="bold"
                android:typeface="sans"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ToggleButton
                android:id="@+id/btn_swiatlo_on_off"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:textOff="@string/btn_swiatlo_ON"
                android:textOn="@string/btn_swiatlo_OFF"
                android:textSize="20sp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_oswietlenie" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
